--- a/spring-cloud-config-client/src/main/resources/bootstrap.yml
+++ b/spring-cloud-config-client/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
     fail-fast: true
     retry:
       max-attempts: 10
-    import: optional:configserver:http://localhost:8888
+    import: optional:configserver:http://config-server:8888
   cloud:
     bootstrap:
       enabled: true
