--- a/spring-cloud-config-server/src/main/resources/application.yml
+++ b/spring-cloud-config-server/src/main/resources/application.yml
@@ -8,8 +8,16 @@ spring:
       server:
         git:
           uri: https://github.com/EternalJourneyman1/spring-cloud-config-server-repo
-          default-label: master
+          default-label: main
           clone-on-start: true
         bootstrap: true
   profiles:
     active: development
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: "*"
